[package]
name = "tui"
version = "0.19.0"
authors = ["Florian Dehau <work@fdehau.com>"]
description = """
A library to build rich terminal user interfaces or dashboards
"""
documentation = "https://docs.rs/tui/0.19.0/tui/"
keywords = ["tui", "terminal", "dashboard"]
repository = "https://github.com/fdehau/tui-rs"
readme = "README.md"
license = "MIT"
exclude = ["assets/*", ".github", "Makefile.toml", "CONTRIBUTING.md", "*.log", "tags"]

edition = "2021"
rust-version = "1.56.1"

[badges]

[features]
default = ["crossterm"]

[dependencies]
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
termion = { version = "1.5", optional = true }
crossterm = { version = "0.25", optional = true }
serde = { version = "1", optional = true, features = ["derive"]}

[dev-dependencies]
rand = "0.8"
argh = "0.1"

